# archon

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Concept.md
docs/container/: cntr.mermaid
docs/context/: context-a.mermaid
docs/definitions/: CONSTRAINTS.md  DESCRIPTION.md  REQUIREMENTS.md
docs/diagrams/component/: cmpt.mermaid
docs/diagrams/components/: cmpt-diagram-agent.mermaid  cmpt-diagram-ruleset.mermaid  cmpt-documentation-ruleset.mermaid  cmpt-expert-agent.mermaid  cmpt-synthetic-agent.mermaid
docs/diagrams/container/: cntr.mermaid
docs/diagrams/containers/: cntr.mermaid
docs/diagrams/context/: cntx.mermaid
docs/diagrams/user-stories/: us001.mermaid
docs/user-stories/: US001.md  _template.md
src/archon/: __main__.py  cli.py
